# agentrx

./: .env  .gitignore  AGENTS.md  CHAT_START.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: prompt-file.md
.github/: copilot-instructions.md
_arx_templates/: README.arx.md
_arx_templates/_arx_agent_tools.arx/commands/agentrx/: README.md
_arx_templates/_arx_proj_docs.arx/: README.md
_arx_templates/_arx_work_docs.arx/: README.md
_arx_templates/_arx_workspace_root.arx/: AGENTS.ARX.md
agentrx/: __init__.py  agents.py  cli.py  models.py  renderer.py
agentrx/agent-tools/commands/: prompt-file.md
agentrx/dot-project/sdd/new/: template.md
agents/prompts/: test_prompt_1.md
agents/prompts/agentrx_dev/: agentrx_readme01.md  git_integration_01.md
claude/commands/: prompt-file.md
cli/: README.md  pyproject.toml
cli/agentrx/: __init__.py  cli.py  render.py
cli/agentrx/commands/: __init__.py  init.py  prompt.py  setup.py
cli/tests/: __init__.py  test_init.py  test_prompt.py  test_setup.py
commands/agentrx/: COMMAND_INDEX.md  GETTING-STARTED.md  QUICKREF.md  README.md  TRIAL_USAGE.md  init.md  prompt-do.md  prompt-new.md  trial-init.md  trial-status.md  trial-work.md
dev/agentrx-sdd/vibe/: 25-1203-1_new-cmd-and-prompt.md  25-1203-2-init-comand.md
docs/: PROCESS.md  PROJECT_DOCS.md  README.md
docs/agentrx/vibes/: create_command_cli_26-02-10-12.md  templates_front_matter_26-02-08-16.md
docs/arx_dev/vibes/: create_arx_skill_26-02-08-16.md  design_arx_templating_26-02-08-16.md  impl_the_init_26-02-08-00.md  ive_updated_the_26-02-10-06.md  tmpl_design_26-02-08-08.md  update_init_26-02-09-06.md  update_the_setup_26-02-10-12.md
docs/features/: feature.md
project_root_files/: AGENT_TOOLS_INDEX.md  CHAT_START.md  README.md
scripts/agentrx/: init.sh  setup-agent-links.sh  setup-claude-links.sh  trial-init.sh  trial-status.sh  trial-work.sh
skills/agentrx/: arx_render.md  arx_templating.md
skills/agentrx/init/: SKILL.md
skills/agentrx/prompt-new/: SKILL.md
templates/: AGENT_TOOLS.ARX.md  AGENT_TOOLS_INDEX.md  ARX_README.md  CHAT_START.md  CONTEXT_DOCUMENTS_INDEX.md  README.md
templates/_arx_proj_docs.arx/: Architecture.ARX.md  README.ARX.md
templates/_arx_target_docs.arx/: PROJECT_DOCS.md  Product.ARX.md  README.md
templates/_arx_target_docs.arx/architecture/: component.ARX.md
templates/_arx_workspace_root.arx/: .cursorrules.arx  AGENTS.ARX.md  CLAUDE.ARX.md
tests/: test_cli.py  test_models.py  test_renderer.py
(+15 files in other folders)
